--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.2",
+    "node": "11.9.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
